--- a/portfolio.html
+++ b/portfolio.html
@@ -5,94 +5,132 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="page">
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+      <nav class="navigation">
+        <a href="./index.html" class="logo"
+          >Web<span class="span-logo">Studio</span></a
+        >
+        <ul class="site-navigation list">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+          <li><a href="#" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contacts-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contacts-link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
-        <section>
-            <ul>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-            </ul>
-        </section>
-      <section><ul>
-        <li>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-        </li>
-        <li>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-        </li>
-        <li>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-        </li>
-        <li>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-        </li>
-        <li>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-        </li>
-        <li>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-        </li>
-        <li>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-        </li>
-        <li>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-        </li>
-        <li>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-        </li>
-      </ul></section>
+      <section class="studio-section">
+        <h1 class="visually-hidden">Наші роботи</h1>
+        <ul class="list">
+          <li><button type="button" class="studio-section-btn">Усі</button></li>
+          <li><button type="button" class="studio-section-btn">Веб-сайти</button></li>
+          <li><button type="button" class="studio-section-btn">Додатки</button></li>
+          <li><button type="button" class="studio-section-btn">Дизайн</button></li>
+          <li><button type="button" class="studio-section-btn">Маркетинг</button></li>
+        </ul>
+        <ul class="list">
+          <li>
+            <img src="./images/site.jpg" alt="сайт на ноутбуці" />
+            <h2>Технокряк</h2>
+            <h3>Веб-сайт</h3>
+          </li>
+          <li>
+            <img
+              src="./images/design.jpg"
+              alt="дизайн постеру два баскетболісти з м'ячем"
+            />
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <h3>Дизайн</h3>
+          </li>
+          <li>
+            <img
+              src="./images/design-app.jpg"
+              alt="додаток для ресторану риба"
+            />
+            <h3>Ресторан Seafood</h3>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/headphones.jpg" alt="Навушники" />
+            <h3>Проєкт Prime</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/boxes-app.jpg" alt="Додаток дві коробки" />
+            <h3>Проєкт Boxes</h3>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/site2.jpg" alt="зображення сайта на моніторі" />
+            <h3>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/magazine.jpg" alt="дизайн журналу" />
+            <h3>Видання Limited Edition</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/tag.jpg" alt="бірка із літерами" />
+            <h3>Проєкт LAB</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/design-app2.jpg"
+              alt="додаток відкритий на ноутбуці"
+            />
+            <h3>Growing Business</h3>
+            <p>Додаток</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo footer-link"
+        ><span class="footer-span">Web</span>Studio</a
+      >
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
+              class="footer-link"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="footer-contacts"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="footer-contacts"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
