--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main>
       <section class="hero">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-btn">Замовити послугу</button>
       </section>
       <section>
@@ -76,7 +76,7 @@
         </ul>
       </section>
       <section>
-        <h2 class="caption">Чим ми займаємося</h2>
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="list">
           <li>
             <img
@@ -102,7 +102,7 @@
         </ul>
       </section>
       <section class="team">
-        <h2 class="headline">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="list">
           <li>
             <img
@@ -110,8 +110,8 @@
               alt="Ігор Дем'яненко Дизайнер продукту"
               width="270"
             />
-            <h3 class="headline-title">Ігор Дем'яненко</h3>
-            <p class="headline-subtitle">Product Designer</p>
+            <h3 class="team-name">Ігор Дем'яненко</h3>
+            <p class="team-position">Product Designer</p>
           </li>
           <li>
             <img
@@ -119,8 +119,8 @@
               alt="Ольга Рєпіна Розробник інтерфейсу"
               width="270"
             />
-            <h3 class="headline-title">Ольга Рєпіна</h3>
-            <p class="headline-subtitle">Frontend Developer</p>
+            <h3 class="team-name">Ольга Рєпіна</h3>
+            <p class="team-position">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -128,8 +128,8 @@
               alt="Микола Тарасов Маркетолог"
               width="270"
             />
-            <h3 class="headline-title">Микола Тарасов</h3>
-            <p class="headline-subtitle">Marketing</p>
+            <h3 class="team-name">Микола Тарасов</h3>
+            <p class="team-position">Marketing</p>
           </li>
           <li>
             <img
@@ -137,8 +137,8 @@
               alt="Михайло Єрмаков Дизайнер інтерфейсу користувача"
               width="270"
             />
-            <h3 class="headline-title">Михайло Єрмаков</h3>
-            <p class="headline-subtitle">UI Designer</p>
+            <h3 class="team-name">Михайло Єрмаков</h3>
+            <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -147,7 +147,7 @@
       <a href="./index.html" class="footer-logo footer-link"
         ><span class="footer-span">Web</span>Studio</a
       >
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a
@@ -159,12 +159,12 @@
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com" class="footer-contacts"
+            <a href="mailto:info@devstudio.com" class="footer-contacts contacts-link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="footer-contacts"
+            <a href="tel:+380961111111" class="footer-contacts contacts-link"
               >+38 096 111 11 11</a
             >
           </li>
