--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
           >Web<span class="span-logo">Studio</span></a
         >
         <ul class="site-navigation list">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+          <li><a href="./index.html" class="link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
           <li><a href="#" class="link">Контакти</a></li>
         </ul>
       </nav>
@@ -39,69 +39,69 @@
       </ul>
     </header>
     <main>
-      <section class="studio-section">
+      <section class="portfolio-section">
         <h1 class="visually-hidden">Наші роботи</h1>
         <ul class="list">
-          <li><button type="button" class="studio-section-btn">Усі</button></li>
-          <li><button type="button" class="studio-section-btn">Веб-сайти</button></li>
-          <li><button type="button" class="studio-section-btn">Додатки</button></li>
-          <li><button type="button" class="studio-section-btn">Дизайн</button></li>
-          <li><button type="button" class="studio-section-btn">Маркетинг</button></li>
+          <li><button type="button" class="portfolio-section-btn">Усі</button></li>
+          <li><button type="button" class="portfolio-section-btn">Веб-сайти</button></li>
+          <li><button type="button" class="portfolio-section-btn">Додатки</button></li>
+          <li><button type="button" class="portfolio-section-btn">Дизайн</button></li>
+          <li><button type="button" class="portfolio-section-btn">Маркетинг</button></li>
         </ul>
         <ul class="list">
           <li>
             <img src="./images/site.jpg" alt="сайт на ноутбуці" />
-            <h2>Технокряк</h2>
-            <h3>Веб-сайт</h3>
+            <h2 class="project-title">Технокряк</h2>
+            <h3 class="project-name">Веб-сайт</h3>
           </li>
           <li>
             <img
               src="./images/design.jpg"
               alt="дизайн постеру два баскетболісти з м'ячем"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <h3>Дизайн</h3>
+            <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+            <h3 class="project-name">Дизайн</h3>
           </li>
           <li>
             <img
               src="./images/design-app.jpg"
               alt="додаток для ресторану риба"
             />
-            <h3>Ресторан Seafood</h3>
-            <p>Додаток</p>
+            <h2 class="project-title">Ресторан Seafood</h2>
+            <h3 class="project-name">Додаток</h3>
           </li>
           <li>
             <img src="./images/headphones.jpg" alt="Навушники" />
-            <h3>Проєкт Prime</h3>
-            <p>Маркетинг</p>
+            <h2 class="project-title">Проєкт Prime</h2>
+            <h3 class="project-name">Маркетинг</h3>
           </li>
           <li>
             <img src="./images/boxes-app.jpg" alt="Додаток дві коробки" />
-            <h3>Проєкт Boxes</h3>
-            <p>Додаток</p>
+            <h2 class="project-title">Проєкт Boxes</h2>
+            <h3 class="project-name">Додаток</h3>
           </li>
           <li>
             <img src="./images/site2.jpg" alt="зображення сайта на моніторі" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h2 class="project-title">Inspiration has no Borders</h2>
+            <h3 class="project-name">Веб-сайт</h3>
           </li>
           <li>
             <img src="./images/magazine.jpg" alt="дизайн журналу" />
-            <h3>Видання Limited Edition</h3>
-            <p>Дизайн</p>
+            <h2 class="project-title">Видання Limited Edition</h2>
+            <h3 class="project-name">Дизайн</h3>
           </li>
           <li>
             <img src="./images/tag.jpg" alt="бірка із літерами" />
-            <h3>Проєкт LAB</h3>
-            <p>Маркетинг</p>
+            <h2 class="project-title">Проєкт LAB</h2>
+            <h3 class="project-name">Маркетинг</h3>
           </li>
           <li>
             <img
               src="./images/design-app2.jpg"
               alt="додаток відкритий на ноутбуці"
             />
-            <h3>Growing Business</h3>
-            <p>Додаток</p>
+            <h2 class="project-title">Growing Business</h2>
+            <h3 class="project-name">Додаток</h3>
           </li>
         </ul>
       </section>
@@ -110,7 +110,7 @@
       <a href="./index.html" class="footer-logo footer-link"
         ><span class="footer-span">Web</span>Studio</a
       >
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a
@@ -122,12 +122,12 @@
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com" class="footer-contacts"
+            <a href="mailto:info@devstudio.com" class="footer-contacts contacts-link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="footer-contacts"
+            <a href="tel:+380961111111" class="footer-contacts contacts-link"
               >+38 096 111 11 11</a
             >
           </li>
