--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
           >Web<span class="span-logo">Studio</span></a
         >
         <ul class="site-navigation list">
-          <li><a href="./index.html" class="link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
           <li><a href="#" class="link">Контакти</a></li>
         </ul>
       </nav>
@@ -52,7 +52,7 @@
           <li>
             <img src="./images/site.jpg" alt="сайт на ноутбуці" />
             <h2 class="project-title">Технокряк</h2>
-            <h3 class="project-name">Веб-сайт</h3>
+            <p class="project-name">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -60,7 +60,7 @@
               alt="дизайн постеру два баскетболісти з м'ячем"
             />
             <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-            <h3 class="project-name">Дизайн</h3>
+            <p class="project-name">Дизайн</p>
           </li>
           <li>
             <img
@@ -68,32 +68,32 @@
               alt="додаток для ресторану риба"
             />
             <h2 class="project-title">Ресторан Seafood</h2>
-            <h3 class="project-name">Додаток</h3>
+            <p class="project-name">Додаток</p>
           </li>
           <li>
             <img src="./images/headphones.jpg" alt="Навушники" />
             <h2 class="project-title">Проєкт Prime</h2>
-            <h3 class="project-name">Маркетинг</h3>
+            <p class="project-name">Маркетинг</p>
           </li>
           <li>
             <img src="./images/boxes-app.jpg" alt="Додаток дві коробки" />
             <h2 class="project-title">Проєкт Boxes</h2>
-            <h3 class="project-name">Додаток</h3>
+            <p class="project-name">Додаток</p>
           </li>
           <li>
             <img src="./images/site2.jpg" alt="зображення сайта на моніторі" />
             <h2 class="project-title">Inspiration has no Borders</h2>
-            <h3 class="project-name">Веб-сайт</h3>
+            <p class="project-name">Веб-сайт</p>
           </li>
           <li>
             <img src="./images/magazine.jpg" alt="дизайн журналу" />
             <h2 class="project-title">Видання Limited Edition</h2>
-            <h3 class="project-name">Дизайн</h3>
+            <p class="project-name">Дизайн</p>
           </li>
           <li>
             <img src="./images/tag.jpg" alt="бірка із літерами" />
             <h2 class="project-title">Проєкт LAB</h2>
-            <h3 class="project-name">Маркетинг</h3>
+            <p class="project-name">Маркетинг</p>
           </li>
           <li>
             <img
@@ -101,7 +101,7 @@
               alt="додаток відкритий на ноутбуці"
             />
             <h2 class="project-title">Growing Business</h2>
-            <h3 class="project-name">Додаток</h3>
+            <p class="project-name">Додаток</p>
           </li>
         </ul>
       </section>
